@@ -21,6 +21,7 @@ import java.io.ByteArrayInputStream;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.FileOutputStream;
+import java.io.FilenameFilter;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
@@ -943,42 +944,146 @@ public class GrouperInstaller {
       commands.add(this.untarredMavenDir.getAbsolutePath() + File.separator + "bin" + File.separator + "mvn");
     }
   }
+  
+  /**
+   * @param arg
+   * 
+   */
+  private void tomeeBounce(String arg) {
+    
+    if (!GrouperInstallerUtils.equals("start", arg) && !GrouperInstallerUtils.equals("stop", arg) && !GrouperInstallerUtils.equals("restart", arg)) {
+      throw new RuntimeException("Expecting arg: start|stop|restart but received: " + arg);
+    }
+    
+    if (GrouperInstallerUtils.equals("restart", arg)) {
+      
+      tomeeBounce("stop");
+      tomeeBounce("start");
+      return;
+    }
+    
+    if (GrouperInstallerUtils.equals("stop", arg)) {
+      
+      if (GrouperInstallerUtils.portAvailable(this.tomeeHttpPort, this.defaultIpAddress)) {
+        System.out.println("Tomee is supposed to be listening on port: " + this.tomeeHttpPort + ", port not listening, assuming tomee is not running...");
+        if (!shouldContinue("Should we " + arg + " tomee anyway?", "", "grouperInstaller.autorun." + arg + "TomeeAnyway")) {
+          return;
+        }
+      }
 
-//  /**
-//   * @param arg  stop, start, etc
-//   * 
-//   */
-//  private void bounceTomcat(String arg) {
-//    
-//    List<String> commands = new ArrayList<String>();
-//    
-//    commands.add("cmd");
-//    commands.add("/c");
-//    commands.add("start");
-//    commands.add("/b");
-//    commands.add(this.untarredTomcatDir.getAbsolutePath() + File.separator + "bin" + File.separator + "catalina.bat");
-//    commands.add(arg);
-//    
-//    System.out.println("\n##################################");
-//    System.out.println("Tomcat " + arg + " with command:"
-//        + convertCommandsIntoCommand(commands) + "\n");
-//    
-//    DOESNT WORK WITH ENV VARS!!!!!
-//    CommandResult commandResult = GrouperInstallerUtils.execCommand(GrouperInstallerUtils.toArray(commands, String.class),
-//        true, true, new String[]{"CATALINA_HOME=" + this.untarredTomcatDir.getAbsolutePath(), 
-//        "JAVA_HOME=" + GrouperInstallerUtils.javaHome(),
-//        "LOGGING_CONFIG=" + this.untarredTomcatDir + File.separator + "conf" + File.separator + "logging.properties"}, 
-//        new File(this.untarredTomcatDir.getAbsolutePath() + File.separator + "bin"));
-//        
-//    
-//    System.out.println("stderr: " + commandResult.getErrorText());
-//    System.out.println("stdout: " + commandResult.getOutputText());
-//    
-//    System.out.println("\nEnd tomcat " + arg );
-//    System.out.println("##################################\n");
-//
-//    
-//  }
+      
+    } else {
+      if (!GrouperInstallerUtils.portAvailable(this.tomeeHttpPort, this.defaultIpAddress)) {
+        System.out.println("Tomee is supposed to be listening on port: " + this.tomeeHttpPort + ", port is already listening!!!!  Why is this????");
+        if (!shouldContinue("Should we " + arg + " tomee anyway?", "", "grouperInstaller.autorun." + arg + "TomeeAnyway")) {
+          return;
+        }
+      }
+      
+    }
+    
+    final List<String> commands = new ArrayList<String>();
+    
+    commands.add(GrouperInstallerUtils.javaCommand());
+    commands.add("-XX:MaxPermSize=150m");
+    commands.add("-Xmx640m");
+    
+    commands.add("-Dcatalina.home=" + this.untarredTomeeDir.getAbsolutePath());
+    //commands.add("-Djava.util.logging.config.file=" + this.untarredTomcatDir.getAbsolutePath() + File.separator + "conf" + File.separator + "logging.properties");
+    
+    commands.add("-cp");
+    commands.add(this.untarredTomeeDir.getAbsolutePath() + File.separator + "bin" + File.separator + "bootstrap.jar:" 
+        + this.untarredTomeeDir.getAbsolutePath() + File.separator + "bin" + File.separator + "tomcat-juli.jar");
+    commands.add("org.apache.catalina.startup.Bootstrap");
+    
+    if (GrouperInstallerUtils.equals("stop", arg)) {
+      commands.add("stop");
+    }
+    
+    System.out.println("\n##################################");
+    
+    String command = "start".equals(arg) ? "startup" : "shutdown";
+    
+    System.out.println("Tomee " + arg + " with command (note you need CATALINA_HOME and JAVA_HOME set):\n  "
+        + this.untarredTomeeDir.getAbsolutePath() + File.separator + "bin" + File.separator + command
+        + (GrouperInstallerUtils.isWindows() ? ".bat" : ".sh") + "\n");
+    
+    //dont wait
+    boolean waitFor = GrouperInstallerUtils.equals("stop", arg) ? true : false;
+    
+    if (waitFor) {
+      try {
+        CommandResult commandResult = GrouperInstallerUtils.execCommand(GrouperInstallerUtils.toArray(commands, String.class),
+            true, true, null, 
+            new File(this.untarredTomeeDir.getAbsolutePath() + File.separator + "bin"), null, true);
+        
+        if (!GrouperInstallerUtils.isBlank(commandResult.getErrorText())) {
+          System.out.println("stderr: " + commandResult.getErrorText());
+        }
+        if (!GrouperInstallerUtils.isBlank(commandResult.getOutputText())) {
+          System.out.println("stdout: " + commandResult.getOutputText());
+        }
+      } catch (Throwable e) {
+        e.printStackTrace();
+        if (!shouldContinue("grouperInstaller.autorun.continueAfterTomeeError")) {
+          return;
+        }
+      }
+    } else {
+      //start in new thread
+      Thread thread = new Thread(new Runnable() {
+        
+        @Override
+        public void run() {
+          GrouperInstallerUtils.execCommand(GrouperInstallerUtils.toArray(commands, String.class),
+              true, true, null, 
+              new File(GrouperInstaller.this.untarredTomeeDir.getAbsolutePath() + File.separator + "bin"), 
+              GrouperInstaller.this.untarredTomeeDir.getAbsolutePath() + File.separator + "logs" + File.separator + "catalina", false);
+        }
+      });
+      thread.setDaemon(true);
+      thread.start();
+
+    }
+    
+    System.out.println("\nEnd tomee " + arg + " (note: logs are in " + this.untarredTomeeDir.getAbsolutePath() + File.separator + "logs)");
+    System.out.println("##################################\n");
+
+    System.out.print("Should we check ports to see if tomee was able to " + arg + " (t|f)? [t]: ");
+    
+    boolean shouldCheckTomee = readFromStdInBoolean(true, "grouperInstaller.autorun." + arg + "TomeeCheckPorts");
+    
+    if (shouldCheckTomee) {
+      System.out.print("Waiting for tomee to " + arg +  "...");
+      boolean success = false;
+      for (int i=0;i<60;i++) {
+        GrouperInstallerUtils.sleep(1000);
+        //check port
+        boolean portAvailable = GrouperInstallerUtils.portAvailable(this.tomeeHttpPort, this.defaultIpAddress);
+        if (GrouperInstallerUtils.equals("start", arg)) {
+          if (!portAvailable) {
+            success = true;
+            System.out.println("\nTomee listening on port: " + this.tomeeHttpPort);
+            break;
+          }
+        } else {
+          if (portAvailable) {
+            success = true;
+            System.out.println("\nTomee not listening on port: " + this.tomeeHttpPort);
+            break;
+          }
+        }
+        System.out.print(".");
+      }
+      if (!success) {
+        throw new RuntimeException("Trying to " + arg + " tomee but couldnt properly detect " + arg + " on port " + this.tomeeHttpPort);
+      }
+    } else {
+      System.out.println("Waiting 10 seconds for tomee to " + arg + "...");
+      GrouperInstallerUtils.sleep(10000);
+    }
+  }
+
   
   /**
    * @param arg
@@ -1164,6 +1269,9 @@ public class GrouperInstaller {
 
   /** untarred dir */
   private File untarredTomcatDir;
+  
+  /** untarred tomee dir */
+  private File untarredTomeeDir;
 
   /** main install dir, must end in file separator */
   private String grouperTarballDirectoryString;
@@ -1176,6 +1284,68 @@ public class GrouperInstaller {
   
   /** grouper system password */
   private String grouperSystemPassword;
+  
+  /**
+   * 
+   */
+  private void tomeeConfigureGrouperSystem() {
+    
+//    while (true) {
+//      System.out.print("Enter the GrouperSystem password: ");
+//      this.grouperSystemPassword = readFromStdIn("grouperInstaller.autorun.grouperSystemPassword");
+//      this.grouperSystemPassword = GrouperInstallerUtils.defaultString(this.grouperSystemPassword);
+//      
+//      if (!GrouperInstallerUtils.isBlank(this.grouperSystemPassword)) {
+//        break;
+//      }
+//      System.out.println("The GrouperSystem password cannot be blank!");
+//    }
+
+    System.out.print("Do you want to set the GrouperSystem password in " + this.untarredTomeeDir + File.separator + "conf" + File.separator + "tomcat-users.xml? [t]: ");
+    boolean setGrouperSystemPassword = readFromStdInBoolean(true, "grouperInstaller.autorun.setGrouperSystemPasswordInTomeeUsers");
+    if (setGrouperSystemPassword) {
+
+      //write to the tomee_users file
+      //get the password
+      File tomeeUsersXmlFile = new File(this.untarredTomeeDir.getAbsolutePath() + File.separator + "conf" + File.separator + "tomcat-users.xml");
+      String existingPassword = GrouperInstallerUtils.xpathEvaluateAttribute(tomeeUsersXmlFile, "tomcat-users/user[@username='GrouperSystem']", "password");
+      
+      System.out.println("Editing file: " + tomeeUsersXmlFile.getAbsolutePath());
+
+      NodeList existingRole = GrouperInstallerUtils.xpathEvaluate(tomeeUsersXmlFile, "tomcat-users/role");
+      
+      //<role rolename="grouper_user"/>
+      //<user username="GrouperSystem" password="chang3m3" roles="grouper_user"/>
+
+      
+      if (existingPassword == null) {
+
+        addToXmlFile(tomeeUsersXmlFile, ">",  new String[]{"<tomcat-users"}, "<user username=\"GrouperSystem\" password=\"" 
+            + this.grouperSystemPassword + "\" roles=\"grouper_user\"/>", "Tomcat user GrouperSystem");
+         
+      } else {
+        
+        if (GrouperInstallerUtils.equals(existingPassword, this.grouperSystemPassword)) {
+          System.out.println("  - password is already set to that value, leaving file unchanged...");
+
+        } else {
+          
+          editFile(tomeeUsersXmlFile, "password=\"([^\"]*)\"", new String[]{"<user", "username=\"GrouperSystem\""}, 
+              null, this.grouperSystemPassword, "Tomcat password for user GrouperSystem");
+          
+        }
+        
+      }
+
+      if (existingRole == null || existingRole.getLength() == 0) {
+        
+        //add the role
+        addToXmlFile(tomeeUsersXmlFile, ">",  new String[]{"<tomcat-users"}, "<role rolename=\"grouper_user\"/>", "Tomcat role grouper_user");
+        
+      }
+    }
+    
+  }
   
   /**
    * 
@@ -2758,6 +2928,64 @@ public class GrouperInstaller {
     System.out.println("##################################\n");
     
   }
+  
+  /**
+   * build ws scim
+   * @param wsScimDir
+   */
+  private void buildWsScim() {
+    
+    File grouperWsScimSourcesDir =  new File(this.untarredWsDir.getAbsolutePath() + File.separator + "grouper-ws-scim");
+    
+    if (!grouperWsScimSourcesDir.exists() || grouperWsScimSourcesDir.isFile()) {
+      throw new RuntimeException("Cant find grouper-ws-scim: " + grouperWsScimSourcesDir.getAbsolutePath());
+    }
+    
+    File grouperWsScimBuildToDir = new File(grouperWsScimSourcesDir.getAbsolutePath() + File.separator + "target" + File.separator + "classes");
+    
+    boolean rebuildWsScim = true;
+    
+    if (grouperWsScimBuildToDir.exists()) {
+      System.out.print("The Grouper WS Scim has been built in the past, do you want it rebuilt? (t|f) [t]: ");
+      rebuildWsScim = readFromStdInBoolean(true, "grouperInstaller.autorun.rebuildWsScimAfterHavingBeenBuilt");
+    }
+    
+    if (!rebuildWsScim) {
+      return;
+    }
+    
+    List<String> commands = new ArrayList<String>();
+    
+//    \bin\mvn compile -DskipTests
+    addMavenCommands(commands);
+
+    //put 'compile -DskipTests' in there so it wont run tests which we dont want to do
+    // dependency:copy-dependencies package -DskipTests
+    //not compile
+    commands.add("dependency:copy-dependencies");
+    commands.add("package");
+    commands.add("-DskipTests");
+    commands.add("-Drat.ignoreErrors=true");
+    commands.add("-Dlicense.skip=true");
+    
+    System.out.println("\n##################################");
+    System.out.println("Building Grouper WS Scim with command:\n" + grouperWsScimSourcesDir.getAbsolutePath() + "> " 
+        + convertCommandsIntoCommand(commands) + "\n");
+    
+    CommandResult commandResult = GrouperInstallerUtils.execCommand(GrouperInstallerUtils.toArray(commands, String.class),
+        true, true, null, new File(grouperWsScimSourcesDir.getAbsolutePath()), null, true);
+    
+    if (!GrouperInstallerUtils.isBlank(commandResult.getErrorText())) {
+      System.out.println("stderr: " + commandResult.getErrorText());
+    }
+    if (!GrouperInstallerUtils.isBlank(commandResult.getOutputText())) {
+      System.out.println("stdout: " + commandResult.getOutputText());
+    }
+
+    System.out.println("\nEnd building grouper-ws-scim");
+    System.out.println("##################################\n");
+    
+  }
 
   /**
    * build grouper API
@@ -3752,10 +3980,10 @@ public class GrouperInstaller {
    */
   private void mainUpgradeTaskLogic() {
     
-    GrouperInstallerConvertAction grouperInstallerConvertAction = 
-        (GrouperInstallerConvertAction)promptForEnum(
-            "What upgrade task do you want to do (convertEhcacheXmlToProperties)? : ",
-            "grouperInstaller.autorun.upgradeTaskAction", GrouperInstallerConvertAction.class);
+    GrouperInstallerUpgradeTaskAction grouperInstallerConvertAction = 
+        (GrouperInstallerUpgradeTaskAction)promptForEnum(
+            "What upgrade task do you want to do (convertEhcacheXmlToProperties, convertSourcesXmlToProperties)? : ",
+            "grouperInstaller.autorun.upgradeTaskAction", GrouperInstallerUpgradeTaskAction.class);
 
     switch(grouperInstallerConvertAction) {
       case convertEhcacheXmlToProperties:
@@ -3801,6 +4029,41 @@ public class GrouperInstaller {
         }
 
         System.out.println("File was written: " + grouperCacheProperties.getAbsolutePath());
+
+        break;
+      case convertSourcesXmlToProperties:
+
+        System.out.println("Note, you need to convert the sources.xml file for each Grouper runtime, e.g. loader, WS, UI.");
+        System.out.println("Note, to use subject sources from subject.properties, you need to be running Grouper 2.3.0+ with API patch 40 installed.");
+        System.out.print("Enter the location of the sources.xml file: ");
+        String convertSourcesXmlLocation = readFromStdIn("grouperInstaller.autorun.convertSourceXmlLocation");
+
+        File sourcesXmlFile = new File(convertSourcesXmlLocation);
+        if (!sourcesXmlFile.exists()) {
+          System.out.println("Cant find sources.xml: " + sourcesXmlFile.getAbsolutePath());
+          System.exit(1);
+        }
+
+        File subjectProperties = new File(sourcesXmlFile.getParentFile().getAbsolutePath() + File.separator + "subject.properties");
+
+        {
+          System.out.print("Enter the location of the subject.base.properties file [" + subjectProperties.getAbsolutePath() + "]: ");
+          String grouperCacheBasePropertiesLocation = readFromStdIn("grouperInstaller.autorun.convertSubjectPropertiesLocation");
+  
+          if (!GrouperInstallerUtils.isBlank(grouperCacheBasePropertiesLocation)) {
+            subjectProperties = new File(grouperCacheBasePropertiesLocation);
+          }
+        }
+        
+        try {
+          convertSourcesXmlToProperties(subjectProperties, sourcesXmlFile.toURI().toURL());
+        } catch (MalformedURLException mue) {
+          throw new RuntimeException("Malformed url on " + convertSourcesXmlLocation);
+        }
+
+        System.out.println("File was written: " + subjectProperties.getAbsolutePath());
+        System.out.println("You should archive your sources.xml and remove it from your project since it is now unused:\n  " 
+            + sourcesXmlFile.getAbsolutePath());
 
         break;
     }
@@ -3926,32 +4189,13 @@ public class GrouperInstaller {
   /**
    * 
    */
-  public static enum GrouperInstallerMiscConvertAction {
-
-    /** convert ehcache xml to properties */
-    convertEhcacheXmlToProperties
-    ;
-    
-    /**
-     * 
-     * @param string
-     * @param exceptionIfInvalid
-     * @param exceptionIfBlank
-     * @return the action
-     */
-    public static GrouperInstallerMiscConvertAction valueOfIgnoreCase(String string, boolean exceptionIfBlank, boolean exceptionIfInvalid) {
-      return GrouperInstallerUtils.enumValueOfIgnoreCase(GrouperInstallerMiscConvertAction.class, string, exceptionIfBlank, exceptionIfInvalid);
-    }
-    
-  }
-  
-  /**
-   * 
-   */
-  public static enum GrouperInstallerConvertAction {
+  public static enum GrouperInstallerUpgradeTaskAction {
 
     /** convert */
-    convertEhcacheXmlToProperties;
+    convertEhcacheXmlToProperties,
+    
+    /** convert sources xml */
+    convertSourcesXmlToProperties;
     
     /**
      * 
@@ -3960,8 +4204,8 @@ public class GrouperInstaller {
      * @param exceptionIfBlank
      * @return the action
      */
-    public static GrouperInstallerConvertAction valueOfIgnoreCase(String string, boolean exceptionIfBlank, boolean exceptionIfInvalid) {
-      return GrouperInstallerUtils.enumValueOfIgnoreCase(GrouperInstallerConvertAction.class, string, exceptionIfBlank, exceptionIfInvalid);
+    public static GrouperInstallerUpgradeTaskAction valueOfIgnoreCase(String string, boolean exceptionIfBlank, boolean exceptionIfInvalid) {
+      return GrouperInstallerUtils.enumValueOfIgnoreCase(GrouperInstallerUpgradeTaskAction.class, string, exceptionIfBlank, exceptionIfInvalid);
     }
     
   }
@@ -4694,6 +4938,7 @@ public class GrouperInstaller {
 
     this.upgradeEhcacheXml();
     this.upgradeEhcacheXmlToProperties();
+    this.upgradeSourcesXmlToProperties();
 
     this.compareAndCopyFile(this.grouperUtf8File, 
         new File(this.untarredApiDir + File.separator + "conf" + File.separator + "grouperUtf8.txt"),
@@ -4701,10 +4946,13 @@ public class GrouperInstaller {
         new File(this.upgradeExistingClassesDirectoryString)
         );
     
-    System.out.println("\nYou should compare " + this.grouperPropertiesFile.getParentFile().getAbsolutePath() + File.separator + "sources.xml"
-        + "\n  with " + this.untarredApiDir + File.separator + "conf" + File.separator + "sources.xml");
-    System.out.print("Press <enter> to continue after you have merged the sources.xml. ");
-    readFromStdIn("grouperInstaller.autorun.continueAfterMergingSourcesXml");
+    //do this only if less than 2.3.1
+    if (new GiGrouperVersion(this.version).lessThanArg(new GiGrouperVersion("2.3.1"))) {
+      System.out.println("\nYou should compare " + this.grouperPropertiesFile.getParentFile().getAbsolutePath() + File.separator + "sources.xml"
+          + "\n  with " + this.untarredApiDir + File.separator + "conf" + File.separator + "sources.xml");
+      System.out.print("Press <enter> to continue after you have merged the sources.xml. ");
+      readFromStdIn("grouperInstaller.autorun.continueAfterMergingSourcesXml");
+    }
     
     System.out.println("\n##################################");
     System.out.println("Upgrading API jars\n");
@@ -6165,7 +6413,11 @@ public class GrouperInstaller {
         
         //####################################
         //download and configure ws
-        grouperInstaller.downloadAndConfigureWs();
+        grouperInstaller.downloadAndUntarWs();
+        
+        //####################################
+        //configure where api is
+        grouperInstaller.configureWs();
 
         //####################################
         //get ant
@@ -8250,7 +8502,11 @@ public class GrouperInstaller {
     boolean installWs = readFromStdInBoolean(true, "grouperInstaller.autorun.installWs");
     
     if (installWs) {
-      this.downloadAndConfigureWs();
+      this.downloadAndUntarWs();
+      
+      //#################################### 
+      //configure Ws
+      this.configureWs();
       
       //####################################
       //build WS
@@ -8361,6 +8617,53 @@ public class GrouperInstaller {
     //#####################################
     //start the loader
     startLoader(true);
+    
+    //#####################################
+    // Install Grouper WS Scim Tier API
+    //####################################
+    System.out.print("Do you want to install the grouper ws scim (t|f)? [t]: ");
+    boolean installWsScim = readFromStdInBoolean(true, "grouperInstaller.autorun.installGrouperWsScim");
+    if (installWsScim) {
+      downloadAndUntarWs();
+      
+      //####################################
+      //get maven
+      downloadAndUnzipMaven();
+      
+      //####################################
+      //look for or ask or download apache tomee
+      File tomeeDir = downloadTomee();
+      File unzippedTomeeFile = unzip(tomeeDir.getAbsolutePath(), "grouperInstaller.autorun.useLocalToolsDownloadTarEtc");
+      this.untarredTomeeDir = untar(unzippedTomeeFile.getAbsolutePath(), "grouperInstaller.autorun.useLocalToolsDownloadTarEtc", 
+          new File(this.grouperInstallDirectoryString));
+
+      //####################################
+      //ask for tomee port
+      configureTomee();
+
+      //####################################
+      //build grouper ws scim
+      buildWsScim();
+
+      //####################################
+      //configureTomeeGrouperWsScimWebapp
+      configureTomeeGrouperWsScimWebapp();
+      
+      //####################################
+      //set the GrouperSystem password
+      tomeeConfigureGrouperSystem();
+
+      //####################################
+      //bounce tomcat
+      tomeeBounce("restart");
+      
+      //####################################
+      //tell user to go to url
+      System.out.println("##################################\n");
+      System.out.println("Go here for the Grouper WS Scim (change hostname if on different host): http://localhost:" + this.tomeeHttpPort + "/" + "grouper-ws-scim" + "/");
+      System.out.println("\n##################################\n");
+    }
+    
 
     //#####################################
     //success
@@ -8431,7 +8734,7 @@ public class GrouperInstaller {
   /**
    * 
    */
-  public void downloadAndConfigureWs() {
+  public void downloadAndUntarWs() {
 
     //####################################
     //download the ws
@@ -8440,12 +8743,9 @@ public class GrouperInstaller {
     //####################################
     //unzip/untar the ws file
     File unzippedWsFile = unzip(wsDir.getAbsolutePath(), "grouperInstaller.autorun.useLocalWsDownloadTarEtc");
+    System.out.println("Unzipped Ws file is "+unzippedWsFile);
     this.untarredWsDir = untar(unzippedWsFile.getAbsolutePath(), "grouperInstaller.autorun.useLocalWsDownloadTarEtc", 
         new File(this.grouperInstallDirectoryString));
-
-    //####################################
-    //configure where api is
-    this.configureWs();
 
   }
 
@@ -8770,6 +9070,11 @@ public class GrouperInstaller {
    */
   private int tomcatHttpPort = -1;
   
+  /**
+   * 
+   */
+  private int tomeeHttpPort = -1;
+  
   
   /**
    * 
@@ -8949,6 +9254,191 @@ public class GrouperInstaller {
       editFile(serverXmlFile, "port=\"([\\d]+)\"", new String[]{"<Connector", "protocol=\"AJP/1.3\""}, null, Integer.toString(jkPort), "tomcat JK port");
       //<Server port="8005" shutdown="SHUTDOWN">
       editFile(serverXmlFile, "port=\"([\\d]+)\"", new String[]{"<Server", "shutdown=\"SHUTDOWN\""}, null, Integer.toString(shutdownPort), "tomcat shutdown port");
+      break;
+    }
+
+    configureTomcatUriEncoding(serverXmlFile);
+    
+  }
+  
+  /**
+   * 
+   */
+  private void configureTomee() {
+    
+    System.out.print("Do you want to set the tomee memory limit (t|f)? [t]: ");
+    boolean setTomeeMemory = readFromStdInBoolean(true, "grouperInstaller.autorun.setTomeeMemoryLimit");
+    
+    if (setTomeeMemory) {
+      
+      {
+        File catalinaBatFile = new File(this.untarredTomeeDir.getAbsolutePath() + File.separator + "bin" + File.separator + "catalina.bat");
+        
+        System.out.println("Editing file: " + catalinaBatFile.getAbsolutePath());
+        
+        Boolean edited = editFile(catalinaBatFile, "^\\s*set\\s+\"JAVA_OPTS\\s*=.*-Xmx([0-9mMgG]+)", null, null, "512M", "max memory");
+        if (edited == null) {
+          addToFile(catalinaBatFile, "\nset \"JAVA_OPTS=-server -Xmx512M -XX:MaxPermSize=256M\"\n", 65, "max memory");
+        }
+        if (null == editFile(catalinaBatFile, "^\\s*set\\s+\"JAVA_OPTS\\s*=.*-XX:MaxPermSize=([0-9mMgG]+)", null, null, "256M", "permgen memory")) {
+          throw new RuntimeException("Why not edit permgen in file " + catalinaBatFile);
+        }
+      }
+      
+      {
+        File catalinaShFile = new File(this.untarredTomeeDir.getAbsolutePath() + File.separator + "bin" + File.separator + "catalina.sh");
+        
+        System.out.println("Editing file: " + catalinaShFile.getAbsolutePath());
+
+        Boolean edited = editFile(catalinaShFile, "^\\s*JAVA_OPTS\\s*=\".*-Xmx([0-9mMgG]+)", null, null, "512M", "max memory");
+        if (edited == null) {
+          addToFile(catalinaShFile, "\nJAVA_OPTS=\"-server -Xmx512M -XX:MaxPermSize=256M\"\n", 65, "max memory");
+        }
+        if (null == editFile(catalinaShFile, "^\\s*JAVA_OPTS\\s*=\".*-XX:MaxPermSize=([0-9mMgG]+)", null, null, "256M", "permgen memory")) {
+          throw new RuntimeException("Why not edit permgen in file " + catalinaShFile);
+        }
+      }
+    }      
+    
+    
+    if (!GrouperInstallerUtils.isWindows()) {
+
+      System.out.print("Do you want to set tomee scripts to executable (t|f)? [t]: ");
+      boolean setTomeeFiles = readFromStdInBoolean(true, "grouperInstaller.autorun.setTomeeScriptsToExecutable");
+      
+      //GrouperInstallerUtils.toSet("catalina.sh", "startup.sh", "shutdown.sh");
+      Set<String> shFileNames = new HashSet<String>();
+
+      File binDir = new File(this.untarredTomeeDir.getAbsolutePath() + File.separator + "bin");
+
+      //get all sh files, doing wildcards doesnt work
+      for (File file : binDir.listFiles()) {
+        String fileName = GrouperInstallerUtils.defaultString(file.getName());
+        if (file.isFile() && fileName.endsWith(".sh")) {
+          shFileNames.add(fileName);
+        }
+      }
+
+      if (setTomeeFiles) {
+      
+        for (String command : shFileNames) {
+          List<String> commands = new ArrayList<String>();
+          
+          commands.add("chmod");
+          commands.add("+x");
+          //have to do * since all the  sh files need chmod
+          commands.add(this.untarredTomeeDir.getAbsolutePath() + File.separator + "bin" + File.separator + command);
+    
+          System.out.println("Making tomee file executable with command: " + convertCommandsIntoCommand(commands) + "\n");
+    
+          CommandResult commandResult = GrouperInstallerUtils.execCommand(
+              GrouperInstallerUtils.toArray(commands, String.class), true, true, null, 
+              new File(this.untarredTomeeDir.getAbsolutePath() + File.separator + "bin"), null, true);
+          
+          if (!GrouperInstallerUtils.isBlank(commandResult.getErrorText())) {
+            System.out.println("stderr: " + commandResult.getErrorText());
+          }
+          if (!GrouperInstallerUtils.isBlank(commandResult.getOutputText())) {
+            System.out.println("stdout: " + commandResult.getOutputText());
+          }
+        }
+      }
+      
+      Set<File> shFiles = new LinkedHashSet<File>();
+      for (String shFileName : shFileNames) {
+        shFiles.add(new File(shFileName));
+      }
+      
+      dos2unix(shFiles, "tomee sh files", "OnTomeeFiles");
+
+    }
+      
+    //see what the current ports are
+    this.tomeeHttpPort = -1;
+    
+    File serverXmlFile = new File(this.untarredTomeeDir.getAbsolutePath() + File.separator + "conf" + File.separator + "server.xml");
+    
+    int shutdownPort = GrouperInstallerUtils.xpathEvaluateAttributeInt(serverXmlFile, "/Server", "port", -1);
+    
+    int originalShutdownPort = shutdownPort;
+    
+    //  /Server/Service/Connector <Connector port="8080" protocol="HTTP/1.1" 
+    this.tomeeHttpPort = GrouperInstallerUtils.xpathEvaluateAttributeInt(serverXmlFile, "/Server/Service/Connector[@protocol='HTTP/1.1']", "port", -1);
+
+    int originalTomeeHttpPort = this.tomeeHttpPort;
+
+    // <Connector port="8009" protocol="AJP/1.3" redirectPort="8443" />
+    int jkPort = GrouperInstallerUtils.xpathEvaluateAttributeInt(serverXmlFile, "/Server/Service/Connector[@protocol='AJP/1.3']", "port", -1);
+
+    int originalJkPort = jkPort;
+    
+    String portsCommaSeparated = GrouperInstallerUtils.propertiesValue("grouperInstaller.default.tomeePorts", false);
+    if (!GrouperInstallerUtils.isBlank(portsCommaSeparated)) {
+      
+      String[] portsStrings = GrouperInstallerUtils.splitTrim(portsCommaSeparated, ",");
+      
+      if (portsStrings.length != 3) {
+        throw new RuntimeException("Why is grouperInstaller.default.tomeePorts from grouper.installer.properties not 3 ints comma separated? " + portsCommaSeparated);
+      }
+      
+      this.tomeeHttpPort = GrouperInstallerUtils.intValue(portsStrings[0]);
+      jkPort = GrouperInstallerUtils.intValue(portsStrings[1]);
+      shutdownPort = GrouperInstallerUtils.intValue(portsStrings[2]);
+      
+    }
+    
+    while(true) {
+      System.out.print("What ports do you want tomee to run on (HTTP, JK, shutdown): [" + this.tomeeHttpPort + ", " + jkPort + ", " + shutdownPort + "]: ");
+      
+      String ports = readFromStdIn("grouperInstaller.autorun.tomeePorts");
+      
+      if (GrouperInstallerUtils.isBlank(ports)) {
+        if (this.tomeeHttpPort == originalTomeeHttpPort && jkPort == originalJkPort && shutdownPort == originalShutdownPort) {
+          break;
+        }
+      } else {
+        String[] portsArray = GrouperInstallerUtils.splitTrim(ports, ",");
+        if (GrouperInstallerUtils.length(portsArray) == 3) {
+          for (String portString : portsArray) {
+            try {
+              GrouperInstallerUtils.intValue(portString);
+            } catch (Exception e) {
+              continue;
+            }
+          }
+        } else {
+          continue;
+        }
+        //ok, we have three integer entries
+        this.tomeeHttpPort = GrouperInstallerUtils.intValue(portsArray[0]);
+        jkPort = GrouperInstallerUtils.intValue(portsArray[1]);
+        shutdownPort = GrouperInstallerUtils.intValue(portsArray[2]);
+      }
+      
+      if (!GrouperInstallerUtils.portAvailable(this.tomeeHttpPort, this.defaultIpAddress)) {
+        System.out.print("The tomee HTTP port is in use or unavailable: " + this.tomeeHttpPort + ", do you want to pick different ports? (t|f): ");
+        boolean pickDifferentPorts = readFromStdInBoolean(null, "grouperInstaller.autorun.pickDifferentPortIfInUse");
+        if (pickDifferentPorts) {
+          continue;
+        }
+      }
+      if (!GrouperInstallerUtils.portAvailable(jkPort, this.defaultIpAddress)) {
+        System.out.print("The tomee JK port is in use or unavailable: " + this.tomeeHttpPort + ", do you want to pick different ports? (t|f): ");
+        boolean pickDifferentPorts = readFromStdInBoolean(null, "grouperInstaller.autorun.pickDifferentPortIfInUse");
+        if (pickDifferentPorts) {
+          continue;
+        }
+      }
+      
+      System.out.println("Editing tomee config file: " + serverXmlFile.getAbsolutePath());
+      //lets edit the file
+      //<Connector port="8080" protocol="HTTP/1.1" 
+      editFile(serverXmlFile, "port=\"([\\d]+)\"", new String[]{"<Connector", "protocol=\"HTTP/1.1\""}, 
+          new String[]{"SSLEnabled=\"true\""}, Integer.toString(this.tomcatHttpPort), "tomee HTTP port");
+      //<Connector port="8009" protocol="AJP/1.3" redirectPort="8443" />
+      editFile(serverXmlFile, "port=\"([\\d]+)\"", new String[]{"<Connector", "protocol=\"AJP/1.3\""}, null, Integer.toString(jkPort), "tomee JK port");
+      //<Server port="8005" shutdown="SHUTDOWN">
+      editFile(serverXmlFile, "port=\"([\\d]+)\"", new String[]{"<Server", "shutdown=\"SHUTDOWN\""}, null, Integer.toString(shutdownPort), "tomee shutdown port");
       break;
     }
 
@@ -9594,13 +10084,16 @@ public class GrouperInstaller {
 
     return uiFile;
   }
-
+  
   /**
    * 
    * @return the file of the directory of WS
    */
   private File downloadWs() {
+    
     String urlToDownload = GrouperInstallerUtils.propertiesValue("download.server.url", true);
+    
+    //String urlToDownload = "http://localhost:8085/grouper/grouperExternal/public/assets/dojo/dijit/themes/claro/images";
     
     if (!urlToDownload.endsWith("/")) {
       urlToDownload += "/";
@@ -9612,6 +10105,7 @@ public class GrouperInstaller {
 
     File wsFile = new File(this.grouperTarballDirectoryString + wsFileName);
     
+    System.out.println("wsFile path is "+wsFile.getAbsolutePath());
     downloadFile(urlToDownload, wsFile.getAbsolutePath(), "grouperInstaller.autorun.useLocalWsDownloadTarEtc");
 
     return wsFile;
@@ -9675,6 +10169,28 @@ public class GrouperInstaller {
     downloadFile(urlToDownload, tomcatFile.getAbsolutePath(), "grouperInstaller.autorun.useLocalToolsDownloadTarEtc");
 
     return tomcatFile;
+  }
+  
+  /**
+   * 
+   * @return the file of the directory of tomee
+   */
+  private File downloadTomee() {
+    String urlToDownload = GrouperInstallerUtils.propertiesValue("download.server.url", true);
+    
+    //String urlToDownload = "http://localhost:8085/grouper/grouperExternal/public/assets/dojo/dijit/themes/claro/images";
+    
+    if (!urlToDownload.endsWith("/")) {
+      urlToDownload += "/";
+    }
+
+    urlToDownload += "downloads/tools/apache-tomee-webprofile-7.0.0.tar.gz";
+    
+    File tomeeFile = new File(this.grouperTarballDirectoryString + "apache-tomee-webprofile-7.0.0.tar.gz");
+    
+    downloadFile(urlToDownload, tomeeFile.getAbsolutePath(), "grouperInstaller.autorun.useLocalToolsDownloadTarEtc");
+
+    return tomeeFile;
   }
 
   /**
@@ -10051,6 +10567,98 @@ public class GrouperInstaller {
       System.out.println("HSQL was not detected to be running (did not successfully stop it)");
     }
   }
+  
+  
+  /**
+   * 
+   */
+  private void configureTomeeGrouperWsScimWebapp() {
+    
+    File serverXmlFile = new File(this.untarredTomeeDir.getAbsolutePath() 
+        + File.separator + "conf" + File.separator + "server.xml");
+    
+    //C:\mchyzer\grouper\trunk\grouper-installer\grouper.ui-2.0.2\dist\grouper
+    //
+    //<Context docBase="C:\mchyzer\grouper\trunk\grouper-ws_trunk\webapp" path="/grouper-ws" reloadable="false"/>
+    //Server
+    //Service
+    //Engine
+    //Host
+
+    System.out.print("Enter the URL path for the Grouper WS Scim [grouper-ws-scim]: ");
+    this.tomeeWsScimPath = readFromStdIn("grouperInstaller.autorun.urlPathForGropuerWsScim");
+    
+    if (GrouperInstallerUtils.isBlank(this.tomeeWsScimPath)) {
+      this.tomeeWsScimPath = "grouper-ws-scim";
+    }
+
+    if (this.tomeeWsScimPath.endsWith("/") || this.tomeeWsScimPath.endsWith("\\")) {
+      this.tomeeWsScimPath = this.tomeeWsScimPath.substring(0, this.tomeeWsScimPath.length()-1);
+    }
+    if (this.tomeeWsScimPath.startsWith("/") || this.tomeeWsScimPath.startsWith("\\")) {
+      this.tomeeWsScimPath = this.tomeeWsScimPath.substring(1, this.tomeeWsScimPath.length());
+    }
+    
+    String currentDocBase = GrouperInstallerUtils.xpathEvaluateAttribute(serverXmlFile, 
+        "Server/Service/Engine/Host/Context[@path='/" + this.tomeeWsScimPath + "']", "docBase");
+
+    String shouldBeDocBase = this.untarredWsDir.getAbsolutePath() + File.separator + "grouper-ws-scim" + File.separator + "target" + File.separator + "grouper-ws-scim";
+
+    System.out.println("Editing tomee config file: " + serverXmlFile.getAbsolutePath());
+    
+    if (GrouperInstallerUtils.isBlank(currentDocBase)) {
+
+      //need to add it
+      //<Host appBase="webapps" autoDeploy="true" name="localhost" unpackWARs="true" xmlNamespaceAware="false" xmlValidation="false">
+      //<Context docBase="C:\mchyzer\grouper\trunk\grouper-ws_trunk\webapp" path="/grouper-ws" reloadable="false"/>
+      addToXmlFile(serverXmlFile, ">", new String[]{"<Host "}, 
+          "<Context docBase=\"" + shouldBeDocBase + "\" path=\"/" + this.tomeeWsScimPath + "\" reloadable=\"false\"/>", "tomee context for Grouper WS Scim");
+
+    } else {
+
+      if (!GrouperInstallerUtils.equals(currentDocBase, shouldBeDocBase)) {
+        
+        //lets edit the file
+        //<Context docBase="C:\mchyzer\grouper\trunk\grouper-ws_trunk\webapp" path="/grouper-ws" reloadable="false"/>
+        editFile(serverXmlFile, "docBase=\"([^\"]+)\"", new String[]{"<Context", "path=\"/" + this.tomeeWsScimPath + "\""}, 
+            null, shouldBeDocBase, "tomee context for Grouper WS Scim");
+
+      } else {
+        
+        System.out.println("  - Context is already set for Grouper WS Scim");
+        
+      }
+      
+      
+    }
+    
+    currentDocBase = GrouperInstallerUtils.xpathEvaluateAttribute(serverXmlFile, 
+        "Server/Service/Engine/Host/Context[@path='/" + this.tomeeWsScimPath + "']", "docBase");
+    
+    if (!GrouperInstallerUtils.equals(currentDocBase, shouldBeDocBase)) {
+      System.out.println("Tried to edit server.xml but it didnt work, should have context of: '" 
+          + shouldBeDocBase + "', but was: '" + currentDocBase + "'");
+    }
+    
+    File[] allFiles = new File(this.untarredApiDir + File.separator + "conf").listFiles(new FilenameFilter() {
+      
+      @Override
+      public boolean accept(File file, String name) {
+        return name.endsWith(".properties") || name.endsWith(".xml");
+      }
+    });
+    
+    
+    for (File fileToCopyFrom : allFiles) {
+      if (fileToCopyFrom.isFile()) {
+        File destFile = new File(shouldBeDocBase + File.separator + "WEB-INF" + File.separator + "classes" + File.separator + fileToCopyFrom.getName());
+        if (destFile.exists() && destFile.isFile()) {
+          GrouperInstallerUtils.copyFile(fileToCopyFrom, destFile, false);
+        }
+      }
+    }
+    
+  }
 
   /**
    * 
@@ -10314,7 +10922,7 @@ public class GrouperInstaller {
     return this.untarredWsDir.getAbsolutePath() + File.separator + "grouper-ws" + File.separator 
       + "build" + File.separator + "dist" + File.separator + "grouper-ws";
   }
-
+  
   /**
      * 
      */
@@ -10704,6 +11312,9 @@ public class GrouperInstaller {
 
   /** tomcat ws path */
   private String tomcatWsPath = null;
+  
+  /** tomee grouper ws scim path */
+  private String tomeeWsScimPath = null;
 
   /** untarred dir, this does NOT end in file.separator */
   private File untarredClientDir;
@@ -11792,16 +12403,79 @@ public class GrouperInstaller {
 
   /**
    * 
+   */
+  private void upgradeSourcesXmlToProperties() {
+  
+    //dont do this if less than 2.3.1
+    if (new GiGrouperVersion(this.version).lessThanArg(new GiGrouperVersion("2.3.1"))) {
+      return;
+    }
+    
+    //this file is done
+    File sourcesXmlFile = new File(this.grouperPropertiesFile.getParentFile().getAbsolutePath() + File.separator + "sources.xml");
+
+    if (!sourcesXmlFile.exists()) {
+      return;
+    }
+      
+    
+    System.out.print("Do you want to convert from sources.xml to subject.properties, note you need to do this to upgrade (t|f)? [t]: ");
+    boolean convert = readFromStdInBoolean(true, "grouperInstaller.autorun.convertSourcesXmlToProperties");
+  
+    if (!convert) {
+      System.out.println("Note: grouper will not run, but whatever you want to do!!!!");
+    }
+    File bakFile = null;
+    if (this.subjectPropertiesFile.exists()) {
+      //see if there is anything in it
+      Properties grouperCacheProperties = GrouperInstallerUtils.propertiesFromFile(this.subjectPropertiesFile);
+      if (grouperCacheProperties.size() > 0) {
+        bakFile = this.backupAndDeleteFile(this.grouperCachePropertiesFile, true);
+      }
+    }
+    
+    URL sourcesXmlUrl = null;
+    
+    try {
+      sourcesXmlUrl = sourcesXmlFile.toURI().toURL();
+    } catch (Exception e) {
+      throw new RuntimeException("Problem with sources.xml: " + (sourcesXmlFile == null ? null : sourcesXmlFile.getAbsoluteFile()), e);
+    }
+    
+    //convert
+    convertSourcesXmlToProperties(this.subjectPropertiesFile, sourcesXmlUrl);
+    
+    File subjectBakFile = bakFile(this.subjectPropertiesFile);
+    GrouperInstallerUtils.copyFile(this.subjectPropertiesFile, subjectBakFile, true);
+    this.backupAndDeleteFile(sourcesXmlFile, true);
+    
+    {
+      File sourcesExampleXmlFile = new File(this.grouperPropertiesFile.getParentFile().getAbsolutePath() + File.separator + "sources.example.xml");
+      if (sourcesExampleXmlFile.exists()) {
+        this.backupAndDeleteFile(sourcesExampleXmlFile, true);
+      }
+    }
+    
+    if (bakFile != null) {
+      System.out.println("Note, you had settings in your subject.properties (not common), this file has been moved to: " + bakFile.getAbsolutePath());
+      System.out.println("Merge your settings from that file to " + this.subjectPropertiesFile.getAbsolutePath());
+      System.out.print("Press <enter> to continue: ");
+      readFromStdIn("grouperInstaller.autorun.convertSourcesXmlToPropertiesHadPropertiesInFile");
+    }
+  }
+
+  /**
+   * 
    * @param grouperCacheBasePropertiesFile 
    * @param grouperCachePropertiesFile
    * @param ehcacheXmlUrl
    */
   public static void convertEhcacheXmlToProperties(File grouperCacheBasePropertiesFile, File grouperCachePropertiesFile, URL ehcacheXmlUrl) {
-
+  
     //look at base properties
     Properties grouperCacheProperties = grouperCachePropertiesFile.exists() ? 
         GrouperInstallerUtils.propertiesFromFile(grouperCachePropertiesFile) : new Properties();
-
+  
     if (!grouperCacheBasePropertiesFile.exists()) {
       throw new RuntimeException(grouperCacheBasePropertiesFile.getAbsolutePath() + " must exist and does not!");
     }
@@ -11809,7 +12483,7 @@ public class GrouperInstaller {
     if (grouperCacheProperties.size() > 0) {
       throw new RuntimeException(grouperCachePropertiesFile.getAbsolutePath() + " exists and must not.  Delete the file and run this again!");
     }
-
+  
     if (!grouperCachePropertiesFile.getParentFile().exists() || !grouperCachePropertiesFile.getParentFile().isDirectory()) {
       throw new RuntimeException(grouperCachePropertiesFile.getParentFile().getAbsolutePath() + " must exist and must be a directory");
     }
@@ -11844,7 +12518,7 @@ public class GrouperInstaller {
             + "# the base settings.  See the grouper.cache.base.properties for the possible\n"
             + "# settings that can be applied to the grouper.cache.properties\n\n"
         );
-
+  
     {
       // <diskStore path="java.io.tmpdir"/>
       NodeList diskStoreNodeList = GrouperInstallerUtils.xpathEvaluate(ehcacheXmlUrl, "/ehcache/diskStore");
@@ -11853,7 +12527,7 @@ public class GrouperInstaller {
       }
   
       Element element = (Element)diskStoreNodeList.item(0);
-
+  
       NamedNodeMap configuredNamedNodeMap = element.getAttributes();
       if (configuredNamedNodeMap.getLength() != 1 || !"path".equals(configuredNamedNodeMap.item(0).getNodeName())) {
         throw new RuntimeException("Expecting one diskStore attribute: path");
@@ -11866,7 +12540,7 @@ public class GrouperInstaller {
       }
       
     }    
-
+  
     {
       //  <defaultCache
       //    maxElementsInMemory="1000"
@@ -11883,21 +12557,21 @@ public class GrouperInstaller {
       }
   
       Element element = (Element)diskStoreNodeList.item(0);
-
+  
       NamedNodeMap configuredNamedNodeMap = element.getAttributes();
       
       if (configuredNamedNodeMap.getLength() != 6) {
         throw new RuntimeException("Expecting defaultCache with these attributes: maxElementsInMemory, "
             + "eternal, timeToIdleSeconds, timeToLiveSeconds, overflowToDisk, statistics");
       }
-
+  
       boolean madeChanges = false;
       
       for (int i=0;i<configuredNamedNodeMap.getLength(); i++) {
         
         String attributeName = configuredNamedNodeMap.item(i).getNodeName();
         String value = element.getAttribute(attributeName);
-
+  
         if ("maxElementsInMemory".equals(attributeName)) {
           if (!"1000".equals(value)) {
             grouperEhcachePropertiesContents.append("cache.defaultCache.maxElementsInMemory = " + value + "\n");
@@ -11936,7 +12610,7 @@ public class GrouperInstaller {
           throw new RuntimeException("Not expecting attribuet defaultCache " + attributeName);
         }
       }
-
+  
       if (madeChanges) {
         grouperEhcachePropertiesContents.append("\n");
       }
@@ -11950,7 +12624,7 @@ public class GrouperInstaller {
     for (int i=0;i<nodeList.getLength();i++) {
       
       Element element = (Element)nodeList.item(i);
-
+  
       //  <cache  name="edu.internet2.middleware.grouper.internal.dao.hib3.Hib3MemberDAO.FindBySubject"
       //      maxElementsInMemory="5000"
       //      eternal="false"
@@ -11967,7 +12641,7 @@ public class GrouperInstaller {
       Integer timeToLiveSeconds = GrouperInstallerUtils.intObjectValue(element.getAttribute("timeToLiveSeconds"), true);
       Boolean overflowToDisk = GrouperInstallerUtils.booleanObjectValue(element.getAttribute("overflowToDisk"));
       Boolean statistics = GrouperInstallerUtils.booleanObjectValue(element.getAttribute("statistics"));
-
+  
       //any attributes we dont expect?
       NamedNodeMap configuredNamedNodeMap = element.getAttributes();
       //see which attributes are new or changed
@@ -11993,7 +12667,7 @@ public class GrouperInstaller {
       //  cache.name.edu_internet2_middleware_grouper_internal_dao_hib3_Hib3GroupDAO.timeToLiveSeconds = 1
       //  cache.name.edu_internet2_middleware_grouper_internal_dao_hib3_Hib3GroupDAO.overflowToDisk = false
       //  cache.name.edu_internet2_middleware_grouper_internal_dao_hib3_Hib3GroupDAO.statistics = false
-
+  
       boolean madeChanges = false;
       
       if (maxElementsInMemory != null && !GrouperInstallerUtils.defaultString((String)grouperCacheBaseProperties.get("cache.name." + key + ".maxElementsInMemory")).equals(maxElementsInMemory.toString())) {
@@ -12026,6 +12700,650 @@ public class GrouperInstaller {
     }
   
     GrouperInstallerUtils.saveStringIntoFile(grouperCachePropertiesFile, grouperEhcachePropertiesContents.toString());
+  }
+
+  /**
+   * get a subelement value.
+   * e.g. if the node is &lt;source&gt;
+   * and the sub element is &lt;id&gt;someId&lt;/id&gt;
+   * It will return "someId" for subElementName "id"
+   * @param parent
+   * @param subElementName
+   * @param required
+   * @param descriptionForError 
+   * @return the string or null if not there
+   */
+  public static String xmlElementValue(Element parent, String subElementName, boolean required, String descriptionForError) {
+    
+    NodeList nodeList = parent.getElementsByTagName(subElementName);
+    
+    if (nodeList.getLength() < 1) {
+      if (required) {
+        throw new RuntimeException("Cant find subElement <" + subElementName 
+            + "> in parent element " + parent.getNodeName() + ", " + descriptionForError);
+      }
+      return null;
+    }    
+    
+    if (nodeList.getLength() > 1) {
+      throw new RuntimeException("Too many subElements <" + subElementName 
+          + "> in parent element " + parent.getNodeName() + ", " 
+          + nodeList.getLength() + ", " + descriptionForError);
+    }
+    return GrouperInstallerUtils.trimToEmpty(nodeList.item(0).getTextContent());
+  }
+  
+  /**
+   * put in a good comment about this param name
+   * @param paramName
+   * @param paramValue
+   * @param subjectPropertiesContents
+   */
+  private static void convertSourcesXmlParamComment(String paramName, StringBuilder subjectPropertiesContents, String paramValue) {
+    
+    if (paramName == null) {
+      throw new NullPointerException("param-name is null");
+    }
+    
+    if (paramName.startsWith("subjectVirtualAttributeVariable_")) {
+      subjectPropertiesContents.append("\n# when evaluating the virtual attribute EL expression, this variable can be used from this java class.\n"
+          + "# " + paramName + " variable is the " + paramValue + " class.  Call static methods\n");
+    } else if (paramName.startsWith("subjectVirtualAttribute_")) {
+      
+      Pattern pattern = Pattern.compile("^subjectVirtualAttribute_([\\d]+)_(.*)$");
+      Matcher matcher = pattern.matcher(paramName);
+      if (!matcher.matches()) {
+        throw new RuntimeException(paramName + " is invalid, should be of form: subjectVirtualAttribute_<intIndex>_paramName");
+      }
+      
+      String index = matcher.group(1);
+      String attributeName = matcher.group(2);
+      
+      subjectPropertiesContents.append("\n# This virtual attribute index " + index + " is accessible via: subject.getAttributeValue(\"" + attributeName + "\");\n");
+      
+    } else if (GrouperInstallerUtils.equals(paramName, "findSubjectByIdOnCheckConfig")) {
+      
+      subjectPropertiesContents.append("\n# if a system check should try to resolve a subject by id on this source\n");
+
+    } else if (GrouperInstallerUtils.equals(paramName, "subjectIdToFindOnCheckConfig")) {
+      
+      subjectPropertiesContents.append("\n# by default it will try to find a random string.  If you want a speicific ID to be found enter that here\n");
+
+    } else if (GrouperInstallerUtils.equals(paramName, "findSubjectByIdentifiedOnCheckConfig")) {
+      
+      subjectPropertiesContents.append("\n# by default it will do a search by subject identifier\n");
+
+    } else if (GrouperInstallerUtils.equals(paramName, "subjectIdentifierToFindOnCheckConfig")) {
+      
+      subjectPropertiesContents.append("\n# by default it will use a random value for subject identifier to lookup, you can specify a value here\n");
+
+    } else if (GrouperInstallerUtils.equals(paramName, "findSubjectByStringOnCheckConfig")) {
+      
+      subjectPropertiesContents.append("\n# by default it will search for a subject by string\n");
+
+    } else if (GrouperInstallerUtils.equals(paramName, "stringToFindOnCheckConfig")) {
+      
+      subjectPropertiesContents.append("\n# you can specify the search string here or it will be a random value\n");
+
+    } else if (GrouperInstallerUtils.equals(paramName, "sortAttribute0")) {
+      
+      subjectPropertiesContents.append("\n# the 1st sort attribute for lists on screen that are derived from member table (e.g. search for member in group)\n"
+          + "# you can have up to 5 sort attributes \n");
+
+    } else if (GrouperInstallerUtils.equals(paramName, "sortAttribute1")) {
+      
+      subjectPropertiesContents.append("\n# the 2nd sort attribute for lists on screen that are derived from member table (e.g. search for member in group)\n"
+          + "# you can have up to 5 sort attributes \n");
+
+    } else if (GrouperInstallerUtils.equals(paramName, "sortAttribute2")) {
+      
+      subjectPropertiesContents.append("\n# the 3rd sort attribute for lists on screen that are derived from member table (e.g. search for member in group)\n"
+          + "# you can have up to 5 sort attributes \n");
+
+    } else if (GrouperInstallerUtils.equals(paramName, "sortAttribute3")) {
+      
+      subjectPropertiesContents.append("\n# the 4th sort attribute for lists on screen that are derived from member table (e.g. search for member in group)\n"
+          + "# you can have up to 5 sort attributes \n");
+
+    } else if (GrouperInstallerUtils.equals(paramName, "sortAttribute4")) {
+      
+      subjectPropertiesContents.append("\n# the 5th sort attribute for lists on screen that are derived from member table (e.g. search for member in group)\n"
+          + "# you can have up to 5 sort attributes \n");
+
+    } else if (GrouperInstallerUtils.equals(paramName, "searchAttribute0")) {
+      
+      subjectPropertiesContents.append("\n# the 1st search attribute for lists on screen that are derived from member table (e.g. search for member in group)\n"
+          + "# you can have up to 5 search attributes \n");
+
+    } else if (GrouperInstallerUtils.equals(paramName, "searchAttribute1")) {
+      
+      subjectPropertiesContents.append("\n# the 2nd search attribute for lists on screen that are derived from member table (e.g. search for member in group)\n"
+          + "# you can have up to 5 search attributes \n");
+
+    } else if (GrouperInstallerUtils.equals(paramName, "searchAttribute2")) {
+      
+      subjectPropertiesContents.append("\n# the 3rd search attribute for lists on screen that are derived from member table (e.g. search for member in group)\n"
+          + "# you can have up to 5 search attributes \n");
+
+    } else if (GrouperInstallerUtils.equals(paramName, "searchAttribute3")) {
+      
+      subjectPropertiesContents.append("\n# the 4th search attribute for lists on screen that are derived from member table (e.g. search for member in group)\n"
+          + "# you can have up to 5 search attributes \n");
+
+    } else if (GrouperInstallerUtils.equals(paramName, "searchAttribute4")) {
+      
+      subjectPropertiesContents.append("\n# the 5th search attribute for lists on screen that are derived from member table (e.g. search for member in group)\n"
+          + "# you can have up to 5 search attributes\n");
+
+    } else if (GrouperInstallerUtils.equals(paramName, "subjectIdentifierAttribute0")) {
+      
+      subjectPropertiesContents.append("\n# subject identifier to store in grouper's member table.  this is used to increase speed of loader and perhaps for provisioning\n"
+          + "# you can have up to max 1 subject identifier\n");
+
+    } else if (GrouperInstallerUtils.equals(paramName, "maxConnectionAge")) {
+      
+      subjectPropertiesContents.append("\n# seconds of max connection age\n");
+
+    } else if (GrouperInstallerUtils.equals(paramName, "testConnectionOnCheckout")) {
+      
+      subjectPropertiesContents.append("\n# if connections from pool should be tested when checked out from pool\n");
+
+    } else if (GrouperInstallerUtils.equals(paramName, "preferredTestQuery")) {
+      
+      subjectPropertiesContents.append("\n# query to use to test the connection when checking out from pool\n");
+
+    } else if (GrouperInstallerUtils.equals(paramName, "idleConnectionTestPeriod")) {
+      
+      subjectPropertiesContents.append("\n# seconds between tests of idle connections in pool\n");
+
+    } else if (GrouperInstallerUtils.equals(paramName, "dbDriver")) {
+      
+      subjectPropertiesContents.append("\n#       e.g. mysql:           com.mysql.jdbc.Driver\n"
+          + "#       e.g. p6spy (log sql): com.p6spy.engine.spy.P6SpyDriver\n"
+          + "#         for p6spy, put the underlying driver in spy.properties\n"
+          + "#       e.g. oracle:          oracle.jdbc.driver.OracleDriver\n"
+          + "#       e.g. hsqldb:          org.hsqldb.jdbcDriver\n"
+          + "#       e.g. postgres:        org.postgresql.Driver\n");
+
+    } else if (GrouperInstallerUtils.equals(paramName, "dbUrl")) {
+      
+      subjectPropertiesContents.append("\n#       e.g. mysql:           jdbc:mysql://localhost:3306/grouper\n"
+          + "#       e.g. p6spy (log sql): [use the URL that your DB requires]\n"
+          + "#       e.g. oracle:          jdbc:oracle:thin:@server.school.edu:1521:sid\n"
+          + "#       e.g. hsqldb (a):      jdbc:hsqldb:dist/run/grouper;create=true\n"
+          + "#       e.g. hsqldb (b):      jdbc:hsqldb:hsql://localhost:9001\n"
+          + "#       e.g. postgres:        jdbc:postgresql:grouper\n");
+
+    } else if (GrouperInstallerUtils.equals(paramName, "dbUser")) {
+      
+      subjectPropertiesContents.append("\n# username when connecting to the database\n");
+
+    } else if (GrouperInstallerUtils.equals(paramName, "dbPwd")) {
+      
+      subjectPropertiesContents.append("\n# password when connecting to the database (or file with encrypted password inside)\n");
+
+    } else if (GrouperInstallerUtils.equals(paramName, "maxResults")) {
+      
+      subjectPropertiesContents.append("\n# maximum number of results from a search, generally no need to get more than 1000\n");
+
+    } else if (GrouperInstallerUtils.equals(paramName, "dbTableOrView")) {
+      
+      subjectPropertiesContents.append("\n# the table or view to query results from.  Note, could prefix with a schema name\n");
+
+    } else if (GrouperInstallerUtils.equals(paramName, "subjectIdCol")) {
+      
+      subjectPropertiesContents.append("\n# the column name to get the subjectId from\n");
+
+    } else if (GrouperInstallerUtils.equals(paramName, "nameCol")) {
+      
+      subjectPropertiesContents.append("\n# the column name to get the name from\n");
+
+    } else if (GrouperInstallerUtils.equals(paramName, "lowerSearchCol")) {
+      
+      subjectPropertiesContents.append("\n# search col where general searches take place, lower case\n");
+
+    } else if (GrouperInstallerUtils.equals(paramName, "defaultSortCol")) {
+      
+      subjectPropertiesContents.append("\n# optional col if you want the search results sorted in the API (note, UI might override)\n");
+
+    } else if (paramName.startsWith("subjectIdentifierCol")) {
+      
+      subjectPropertiesContents.append("\n# you can count up from 0 to N of columns to search by identifier (which might also include by id)\n");
+
+    } else if (paramName.startsWith("subjectAttributeName")) {
+      
+      subjectPropertiesContents.append("\n# you can count up from 0 to N of attributes for various cols.  The name is how to reference in subject.getAttribute()\n");
+
+    } else if (paramName.startsWith("subjectAttributeCol")) {
+      
+      subjectPropertiesContents.append("\n# now you can count up from 0 to N of attributes for various cols.  The name is how to reference in subject.getAttribute()\n");
+
+    } else if (GrouperInstallerUtils.equals(paramName, "statusDatastoreFieldName")) {
+      
+      subjectPropertiesContents.append("\n# STATUS SECTION for searches to filter out inactives and allow\n"
+          + "# the user to filter by status with e.g. status=all\n"
+          + "# this is optional, and advanced\n"
+          + "#\n"
+          + "# field in database or ldap or endpoint that is the status field\n");
+
+    } else if (GrouperInstallerUtils.equals(paramName, "statusLabel")) {
+      
+      subjectPropertiesContents.append("\n# search string from user which represents the status.  e.g. status=active\n");
+
+    } else if (GrouperInstallerUtils.equals(paramName, "statusesFromUser")) {
+      
+      subjectPropertiesContents.append("\n# available statuses from screen (if not specified, any will be allowed). comma separated list.\n"
+          + "# Note, this is optional and you probably dont want to configure it, it is mostly necessary\n"
+          + "# when you have multiple sources with statuses...  if someone types an invalid status\n"
+          + "# and you have this configured, it will not filter by it\n");
+
+    } else if (GrouperInstallerUtils.equals(paramName, "statusAllFromUser")) {
+      
+      subjectPropertiesContents.append("\n# all label from the user\n");
+
+    } else if (GrouperInstallerUtils.equals(paramName, "statusSearchDefault")) {
+      
+      subjectPropertiesContents.append("\n# if no status is specified, this will be used (e.g. for active only).  Note, the value should be of the\n"
+          + "# form the user would type in\n");
+
+    } else if (paramName.startsWith("statusTranslateUser")) {
+      
+      subjectPropertiesContents.append("\n# translate between screen values of status, and the data store value.  Increment the 0 to 1, 2, etc for more translations.\n"
+          + "# so the user could enter: status=active, and that could translate to status_col=A.  The 'user' is what the user types in,\n"
+          + "# the 'datastore' is what is in the datastore.  The user part is not case-sensitive.  Note, this could be a many to one\n");
+
+    } else if (paramName.startsWith("statusTranslateDatastore")) {
+      
+      //hmmm, nothing to do here
+    } else if (GrouperInstallerUtils.equals(paramName, "INITIAL_CONTEXT_FACTORY")) {
+      
+      subjectPropertiesContents.append("\n# e.g. com.sun.jndi.ldap.LdapCtxFactory\n");
+
+    } else if (GrouperInstallerUtils.equals(paramName, "PROVIDER_URL")) {
+      
+      subjectPropertiesContents.append("\n# e.g. ldap://localhost:389\n");
+
+    } else if (GrouperInstallerUtils.equals(paramName, "SECURITY_AUTHENTICATION")) {
+      
+      subjectPropertiesContents.append("\n# e.g. simple, none, sasl_mech\n");
+
+    } else if (GrouperInstallerUtils.equals(paramName, "SECURITY_PRINCIPAL")) {
+      
+      subjectPropertiesContents.append("\n# e.g. cn=Manager,dc=example,dc=edu\n");
+
+    } else if (GrouperInstallerUtils.equals(paramName, "SECURITY_CREDENTIALS")) {
+      
+      subjectPropertiesContents.append("\n# can be a password or a filename of the encrypted password\n");
+
+    } else if (GrouperInstallerUtils.equals(paramName, "SubjectID_AttributeType")) {
+      
+      subjectPropertiesContents.append("\n# ldap attribute which is the subject id.  e.g. exampleEduRegID   Each subject has one and only one subject id.  Generally it is opaque and permanent.\n");
+
+    } else if (GrouperInstallerUtils.equals(paramName, "SubjectID_formatToLowerCase")) {
+      
+      subjectPropertiesContents.append("\n# if the subject id should be changed to lower case after reading from datastore.  true or false\n");
+
+    } else if (GrouperInstallerUtils.equals(paramName, "Name_AttributeType")) {
+      
+      subjectPropertiesContents.append("\n# attribute which is the subject name\n");
+
+    } else if (GrouperInstallerUtils.equals(paramName, "Description_AttributeType")) {
+      
+      subjectPropertiesContents.append("\n# attribute which is the subject description\n");
+
+    } else if (GrouperInstallerUtils.equals(paramName, "VTLDAP_VALIDATOR")) {
+      
+      subjectPropertiesContents.append("\n# LdapValidator provides an interface for validating ldap objects when they are in the pool.\n"
+          + "# ConnectLdapValidator validates an ldap connection is healthy by testing it is connected.\n"
+          + "# CompareLdapValidator validates an ldap connection is healthy by performing a compare operation.\n");
+
+    } else if (GrouperInstallerUtils.equals(paramName, "VTLDAP_VALIDATOR_COMPARE_DN")) {
+      
+      subjectPropertiesContents.append("\n# if VTLDAP_VALIDATOR is CompareLdapValidator, this is the DN of the ldap object to get, e.g. ou=People,dc=vt,dc=edu\n");
+
+    } else if (GrouperInstallerUtils.equals(paramName, "VTLDAP_VALIDATOR_COMPARE_SEARCH_FILTER_STRING")) {
+      
+      subjectPropertiesContents.append("\n# if VTLDAP_VALIDATOR is CompareLdapValidator, this is the filter string, e.g. ou=People\n");
+
+    } else {
+      
+      //hmmm, not sure what to do here, no comment
+      subjectPropertiesContents.append("\n");
+
+    }
+
+  }
+  
+  /**
+   * valid source param pattern
+   */
+  private static Pattern sourcesValidParamPattern = Pattern.compile("^[A-Za-z0-9_]+$");
+  
+  /**
+   * 
+   * @param subjectPropertiesFile 
+   * @param sourcesXmlUrl
+   */
+  public static void convertSourcesXmlToProperties(File subjectPropertiesFile, URL sourcesXmlUrl) {
+
+    //look at base properties
+    Properties subjectProperties = subjectPropertiesFile.exists() ? 
+        GrouperInstallerUtils.propertiesFromFile(subjectPropertiesFile) : new Properties();
+
+    if (subjectPropertiesFile.exists()) {
+      
+      //lets see if it just has the default.  the default has no properties
+      if (subjectProperties.size() > 0) {
+        throw new RuntimeException(subjectPropertiesFile.getAbsolutePath() + " exists and must not!  Backup your subject.properties and run this again and merge your subject.properties into the result");
+      }
+    }
+    
+    if (!subjectPropertiesFile.getParentFile().exists() || !subjectPropertiesFile.getParentFile().isDirectory()) {
+      throw new RuntimeException(subjectPropertiesFile.getParentFile().getAbsolutePath() + " must exist and must be a directory");
+    }
+    
+    StringBuilder subjectPropertiesContents = new StringBuilder();
+    
+    subjectPropertiesContents.append(
+              "# Copyright 2016 Internet2\n"
+            + "#\n"
+            + "# Licensed under the Apache License, Version 2.0 (the \"License\");\n"
+            + "# you may not use this file except in compliance with the License.\n"
+            + "# You may obtain a copy of the License at\n"
+            + "#\n"
+            + "#   http://www.apache.org/licenses/LICENSE-2.0\n"
+            + "#\n"
+            + "# Unless required by applicable law or agreed to in writing, software\n"
+            + "# distributed under the License is distributed on an \"AS IS\" BASIS,\n"
+            + "# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n"
+            + "# See the License for the specific language governing permissions and\n"
+            + "# limitations under the License.\n"
+            + "\n"
+            + "#\n"
+            + "# Subject configuration\n"
+            + "#\n"
+            + "\n"
+            + "# The subject properties uses Grouper Configuration Overlays (documented on wiki)\n"
+            + "# By default the configuration is read from subject.base.properties\n"
+            + "# (which should not be edited), and the subject.properties overlays\n"
+            + "# the base settings.  See the subject.base.properties for the possible\n"
+            + "# settings that can be applied to the subject.properties\n\n"
+        );
+
+    subjectPropertiesContents.append(
+        "# enter the location of the sources.xml.  Must start with classpath: or file:\n"
+        + "# blank means dont use sources.xml, use subject.properties\n"
+        + "# default is: classpath:sources.xml\n"
+        + "# e.g. file:/dir1/dir2/sources.xml\n"
+        + "subject.sources.xml.location = \n\n");
+      
+    //   <source adapterClass="edu.internet2.middleware.grouper.GrouperSourceAdapter">
+    NodeList sourcesNodeList = GrouperInstallerUtils.xpathEvaluate(sourcesXmlUrl, "/sources/source");
+    
+    Set<String> usedConfigNames = new HashSet<String>();
+    
+    for (int i=0;i<sourcesNodeList.getLength();i++) {
+
+      Element sourceElement = (Element)sourcesNodeList.item(i);
+      
+      String configName = null;
+      String id = null;
+      {
+        //  #########################################
+        //  ## Configuration for source: whateverId
+        //  #########################################
+        //  # generally the <configName> is the same as or similar to the source id.  This cannot have special characters
+        //  # this links together all the configs for this source
+        //  # subjectApi.source.<configName>.id = sourceId
+        id = xmlElementValue(sourceElement, "id", true, "source index " + i);
+        
+        //these are configured in subject.base.properties
+        if (GrouperInstallerUtils.equals(id, "g:gsa")
+            || GrouperInstallerUtils.equals(id, "grouperEntities")) {
+          continue;
+        }
+        configName = convertEhcacheNameToPropertiesKey(id, usedConfigNames);
+        usedConfigNames.add(configName);
+        
+        subjectPropertiesContents.append(
+            "\n#########################################\n"
+            + "## Configuration for source id: " + id + "\n"
+            + "## Source configName: " + configName + "\n"
+            + "#########################################\n"
+            + "subjectApi.source." + configName + ".id = " + id + "\n"
+            );
+      }
+
+      {
+        // <name>Grouper: Group Source Adapter</name>
+        String name = xmlElementValue(sourceElement, "name", true, "source: " + id);
+        subjectPropertiesContents.append("\n# this is a friendly name for the source\n"
+            + "subjectApi.source." + configName + ".name = " + name + "\n");
+      }
+      
+      {
+        // <type>group</type>
+        NodeList typeNodeList = sourceElement.getElementsByTagName("type");
+        Set<String> typeSet = new LinkedHashSet<String>();
+        
+        for (int typeIndex=0; typeIndex<typeNodeList.getLength(); typeIndex++) {
+          
+          typeSet.add(GrouperInstallerUtils.trimToEmpty(typeNodeList.item(typeIndex).getTextContent()));
+          
+        }
+        if (typeNodeList.getLength() > 0) {
+          
+          subjectPropertiesContents.append("\n# type is not used all that much.  Can have multiple types, comma separate.  Can be person, group, application\n"
+              + "subjectApi.source." + configName + ".types = " + GrouperInstallerUtils.join(typeSet.iterator(), ", ") + "\n"
+              );
+        }
+
+      }
+
+      {
+        NamedNodeMap configuredNamedNodeMap = sourceElement.getAttributes();
+        if (configuredNamedNodeMap.getLength() != 1 || !"adapterClass".equals(configuredNamedNodeMap.item(0).getNodeName())) {
+          throw new RuntimeException("Expecting one source attribute: adapterClass for source: " + id);
+        }
+        
+        String adapterClass = sourceElement.getAttribute("adapterClass");
+
+        subjectPropertiesContents.append("\n# the adapter class implements the interface: edu.internet2.middleware.subject.Source\n");
+        subjectPropertiesContents.append("# adapter class must extend: edu.internet2.middleware.subject.provider.BaseSourceAdapter\n");
+        subjectPropertiesContents.append("# edu.internet2.middleware.grouper.subj.GrouperJdbcSourceAdapter2  :  if doing JDBC this should be used if possible.  All subject data in one table/view.\n");
+        subjectPropertiesContents.append("# edu.internet2.middleware.grouper.subj.GrouperJdbcSourceAdapter   :  oldest JDBC source.  Put freeform queries in here\n");
+        subjectPropertiesContents.append("# edu.internet2.middleware.grouper.subj.GrouperJndiSourceAdapter   :  used for LDAP\n");
+        subjectPropertiesContents.append("subjectApi.source." + configName + ".adapterClass = " + adapterClass + "\n");
+      }      
+
+      //  # You can flag a source as not throwing exception on a findAll (general search) i.e. if it is
+      //  # ok if it is down.  Generally you probably won't want to do this.  It defaults to true if omitted.
+      //  # subjectApi.source.<configName>.param.throwErrorOnFindAllFailure.value = true
+
+      {
+        //  <init-param>
+        //    <param-name>subjectVirtualAttribute_0_searchAttribute0</param-name>
+        //    <param-value>${subject.getAttributeValue('name')},${subject.getAttributeValue('displayName')},${subject.getAttributeValue('alternateName')}</param-value>
+        //  </init-param>
+        NodeList initParamNodeList = sourceElement.getElementsByTagName("init-param");
+        
+        Set<String> usedParamNames = new HashSet<String>();
+
+        for (int initParamIndex=0; initParamIndex<initParamNodeList.getLength(); initParamIndex++) {
+          
+          Element initParamElement = (Element)initParamNodeList.item(initParamIndex);
+          String paramName = xmlElementValue(initParamElement, "param-name", true, "param-name index " + initParamIndex + " in source " + id);
+          String paramValue = xmlElementValue(initParamElement, "param-value", true, "param-value " + paramName + " in source " + id);
+          
+          String paramConfigKey = convertEhcacheNameToPropertiesKey(paramName, usedParamNames);
+          convertSourcesXmlParamComment(paramName, subjectPropertiesContents, paramValue);
+
+          //if the param name is invalid, then have a name config
+          if (!GrouperInstallerUtils.equals(paramName, paramConfigKey)) {
+            subjectPropertiesContents.append("subjectApi.source." + configName + ".param." + paramConfigKey + ".name = " + paramName + "\n");
+          }
+          
+          //cant have newlines in there, convert to spaces
+          paramValue = GrouperInstallerUtils.replaceNewlinesWithSpace(paramValue);
+          
+          //  # subjectApi.source.<configName>.param.throwErrorOnFindAllFailure.value = true
+          subjectPropertiesContents.append("subjectApi.source." + configName + ".param." + paramConfigKey + ".value = " + paramValue + "\n");
+
+        }
+
+      }
+
+      {
+        //  <search>
+        //    <searchType>searchSubject</searchType>
+        //    <param>
+        //      <param-name>sql</param-name>
+        //                <param-value>
+        //                  select
+        //                    s.subjectid as id, s.name as name,
+        //      </param-value>
+        //    </param>
+        //  </search>
+        NodeList searchNodeList = sourceElement.getElementsByTagName("search");
+        
+        for (int searchIndex=0; searchIndex<searchNodeList.getLength(); searchIndex++) {
+          
+          Element searchElement = (Element)searchNodeList.item(searchIndex);
+          
+          String searchType = xmlElementValue(searchElement, "searchType", true, "search element in the source: " + id);
+
+          NodeList searchParamNodeList = searchElement.getElementsByTagName("param");
+
+          if (GrouperInstallerUtils.equals(searchType, "searchSubject")) {
+            subjectPropertiesContents.append("\n#searchSubject: find a subject by ID.  ID is generally an opaque and permanent identifier, e.g. 12345678.\n"
+                + "#  Each subject has one and only on ID.  Returns one result when searching for one ID.\n");
+          } else if (GrouperInstallerUtils.equals(searchType, "searchSubjectByIdentifier")) {
+            subjectPropertiesContents.append("\n#searchSubjectByIdentifier: find a subject by identifier.  Identifier is anything that uniquely\n"
+                + "#  identifies the user, e.g. jsmith or jsmith@institution.edu.\n"
+                + "#  Subjects can have multiple identifiers.  Note: it is nice to have if identifiers are unique\n"
+                + "#  even across sources.  Returns one result when searching for one identifier.\n");
+          } else if (GrouperInstallerUtils.equals(searchType, "search")) {
+            subjectPropertiesContents.append("\n#   search: find subjects by free form search.  Returns multiple results.\n");
+          } else {
+            System.out.println("Not expecting searchType: '" + searchType + "'");
+          }
+
+          for (int searchParamIndex=0; searchParamIndex<searchParamNodeList.getLength(); searchParamIndex++) {
+            
+            Element searchParamElement = (Element)searchParamNodeList.item(searchParamIndex);
+            
+            String paramName = xmlElementValue(searchParamElement, "param-name", true, 
+                "search param name element index " + searchParamIndex + " in the source: " + id);
+          
+            String paramValue = xmlElementValue(searchParamElement, "param-value", true, 
+                "search param value element index " + searchParamIndex + " in the source: " + id);
+
+            // cant have newlines in a properties file
+            paramValue = GrouperInstallerUtils.replaceNewlinesWithSpace(paramValue);
+
+            //  #
+            //  # This is how search params are specified.  Note, each source can have different params for each search type
+            //  # subjectApi.source.<configName>.search.<searchType>.param.<paramName>.value = something
+            //  #
+            //  ##############################################
+            //  #
+            //  # Searches for edu.internet2.middleware.grouper.subj.GrouperJdbcConnectionProvider
+            //  #
+            //  # searchSubject:
+            //  #
+            //  # subjectApi.source.<configName>.search.searchSubject.param.sql.value = select s.subjectid as id, s.name as name, (select sa2.value from subjectattribute sa2 where name='name' and sa2.SUBJECTID = s.subjectid) as lfname, (select sa3.value from subjectattribute sa3 where name='loginid' and sa3.SUBJECTID = s.subjectid) as loginid, (select sa4.value from subjectattribute sa4 where name='description' and sa4.SUBJECTID = s.subjectid) as description, (select sa5.value from subjectattribute sa5 where name='email' and sa5.SUBJECTID = s.subjectid) as email from subject s where {inclause}
+            //  #    inclause allows searching by subject id for multiple ids in one query
+            //  # subjectApi.source.<configName>.search.searchSubject.param.inclause.value = s.subjectid = ?
+
+            if (!sourcesValidParamPattern.matcher(paramName).matches()) {
+              throw new RuntimeException("Source " + id + " search " + searchType + " param name is not valid: '" + paramName + "'");
+            }
+            if (GrouperInstallerUtils.equals(searchType, "searchSubject")) {
+              if (GrouperInstallerUtils.equals("sql", paramName)) {
+                subjectPropertiesContents.append("\n# sql is the sql to search for the subject by id should use an {inclause}\n");
+              } else if (GrouperInstallerUtils.equals("inclause", paramName)) {
+                subjectPropertiesContents.append("\n# inclause allows searching by subject for multiple ids or identifiers in one query, must have {inclause} in the sql query,\n"
+                    + "#    this will be subsituted to in clause with the following.  Should use a question mark ? for bind variable\n");
+              } else if (GrouperInstallerUtils.equals("filter", paramName)) {
+                  subjectPropertiesContents.append("\n# sql is the sql to search for the subject by id.  %TERM% will be subsituted by the id searched for\n");
+              }
+            } else if (GrouperInstallerUtils.equals(searchType, "searchSubjectByIdentifier")) {
+              if (GrouperInstallerUtils.equals("sql", paramName)) {
+                subjectPropertiesContents.append("\n# sql is the sql to search for the subject by identifier should use an {inclause}\n");
+              } else if (GrouperInstallerUtils.equals("inclause", paramName)) {
+                subjectPropertiesContents.append("\n# inclause allows searching by subject for multiple ids or identifiers in one query, must have {inclause} in the sql query,\n"
+                    + "#    this will be subsituted to in clause with the following.  Should use a question mark ? for bind variable\n");
+              } else if (GrouperInstallerUtils.equals("filter", paramName)) {
+                subjectPropertiesContents.append("\n# sql is the sql to search for the subject by identifier.  %TERM% will be subsituted by the identifier searched for\n");
+              }
+            } else if (GrouperInstallerUtils.equals(searchType, "search")) {
+              if (GrouperInstallerUtils.equals("sql", paramName)) {
+                subjectPropertiesContents.append("\n# sql is the sql to search for the subject free-form search.  user question marks for bind variables\n");
+              } else if (GrouperInstallerUtils.equals("inclause", paramName)) {
+                throw new RuntimeException("Should not have incluse for search of type search in source: " + id);
+              } else if (GrouperInstallerUtils.equals("filter", paramName)) {
+                subjectPropertiesContents.append("\n# sql is the sql to search for the subject by free form search.  %TERM% will be subsituted by the text searched for\n");
+              }
+            }
+            if (GrouperInstallerUtils.equals("scope", paramName)) {
+              subjectPropertiesContents.append("\n# Scope Values can be: OBJECT_SCOPE, ONELEVEL_SCOPE, SUBTREE_SCOPE\n");
+            } else if (GrouperInstallerUtils.equals("base", paramName)) {
+              subjectPropertiesContents.append("\n# base dn to search in\n");
+            }
+            
+            //  # subjectApi.source.<configName>.search.<searchType>.param.<paramName>.value = something
+            subjectPropertiesContents.append("subjectApi.source." + configName + ".search." + searchType + ".param." + paramName + ".value = " + paramValue + "\n");
+            
+          }
+        }
+      }
+      
+      {
+        // # attributes from ldap object to become subject attributes.  comma separated
+        // <attribute>cn</attribute>
+        // <attribute>sn</attribute>
+        NodeList attributeNodeList = sourceElement.getElementsByTagName("attribute");
+        Set<String> attributeSet = new LinkedHashSet<String>();
+
+        for (int attributeIndex=0; attributeIndex<attributeNodeList.getLength(); attributeIndex++) {
+
+          attributeSet.add(GrouperInstallerUtils.trimToEmpty(attributeNodeList.item(attributeIndex).getTextContent()));
+        }
+        if (attributeNodeList.getLength() > 0) {
+
+          subjectPropertiesContents.append("\n# attributes from ldap object to become subject attributes.  comma separated\n"
+              + "subjectApi.source." + configName + ".attributes = " + GrouperInstallerUtils.join(attributeSet.iterator(), ", ") + "\n");
+
+        }
+
+      }
+      
+      {
+        // # internal attributes are used by grouper only not exposed to code that uses subjects.  comma separated
+        // <internal-attributes>cn</internal-attributes>
+        // <internal-attributes>sn</internal-attributes>
+        NodeList internalAttributeNodeList = sourceElement.getElementsByTagName("internal-attribute");
+        Set<String> internalAttributeSet = new LinkedHashSet<String>();
+
+        for (int internalAttributeIndex=0; internalAttributeIndex<internalAttributeNodeList.getLength(); internalAttributeIndex++) {
+
+          internalAttributeSet.add(GrouperInstallerUtils.trimToEmpty(internalAttributeNodeList.item(internalAttributeIndex).getTextContent()));
+
+        }
+        if (internalAttributeNodeList.getLength() > 0) {
+
+          subjectPropertiesContents.append("\n# internal attributes are used by grouper only not exposed to code that uses subjects.  comma separated\n"
+              + "subjectApi.source." + configName + ".internalAttributes = " + GrouperInstallerUtils.join(internalAttributeSet.iterator(), ", ") + "\n");
+
+        }
+
+      }
+      //space between sources
+      subjectPropertiesContents.append("\n");
+    }
+
+    GrouperInstallerUtils.saveStringIntoFile(subjectPropertiesFile, subjectPropertiesContents.toString());
+
   }
 
   /**
